Update libraries to use java 8